--- a/Springboot/프로젝트 생성 및 설정.md
+++ b/Springboot/프로젝트 생성 및 설정.md
@@ -139,7 +139,7 @@ com.cos.blog.test라는 패키지를 만든다.
 
 ### ✔ BlogControllerTest.java
 
-```
+```java
 package com.cos.blog.test;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -199,7 +199,7 @@ use blog;
 
 ### ✔ 파일 수정
 
-```
+```yaml
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
