--- a/Java/객체 배열.md
+++ b/Java/객체 배열.md
@@ -5,7 +5,7 @@
 ![https://blog.kakaocdn.net/dn/Rk4UI/btrjQJZJZoD/BADyz4cjDfuPNgjSxWFCtK/img.png](https://blog.kakaocdn.net/dn/Rk4UI/btrjQJZJZoD/BADyz4cjDfuPNgjSxWFCtK/img.png)
 
 ![https://blog.kakaocdn.net/dn/mzTRK/btrjO3So6Ed/UWPYeDGuwPq1cw9ndorFD1/img.png](https://blog.kakaocdn.net/dn/mzTRK/btrjO3So6Ed/UWPYeDGuwPq1cw9ndorFD1/img.png)
-<br><br>
+
 ## ✅ 연습 코드
 
 ```java
@@ -32,13 +32,12 @@ class Test{
     }
 }
 ```
-<br><br>
+
 ## ✅ 결과
 
 ![https://blog.kakaocdn.net/dn/b7BhUU/btrknYv4kP5/gn2pPNKHMmLa5nt4lplvB1/img.png](https://blog.kakaocdn.net/dn/b7BhUU/btrknYv4kP5/gn2pPNKHMmLa5nt4lplvB1/img.png)
+<br><br>
 
----
-
-📕 참고
-
-남궁성 [자바의 정석]
+> ### 📕 참고
+> 남궁성 [자바의 정석]
+>
