--- a/Springboot/02.md
+++ b/Springboot/02.md
@@ -1,21 +1,29 @@
+# # 프로젝트 생성 및 설정
+
 ## ✅ 프로젝트 생성
 
-### ✔ 프로젝트를 생성
+### ✔ 프로젝트 생성
 
-![https://blog.kakaocdn.net/dn/bbSbU5/btrkuo2eUXj/g5C7oC8zwD5SVDKz8kKHF1/img.png](https://blog.kakaocdn.net/dn/bbSbU5/btrkuo2eUXj/g5C7oC8zwD5SVDKz8kKHF1/img.png)
+![1](img/02/1.png)
+
+<br>
 
 ### ✔ 이름 변경
 
-![https://blog.kakaocdn.net/dn/bU0e8k/btrkvH7OSOv/lr4pBgiSWXPcHXr9GrOuoK/img.png](https://blog.kakaocdn.net/dn/bU0e8k/btrkvH7OSOv/lr4pBgiSWXPcHXr9GrOuoK/img.png)
+![2](img/02/2.png)
 
 Maven, Java 8, Jar…. 등을 설정해주고 이름과 패키지 이름 변경하고 Next! 그 안에다가 넣었다.
+
+<br><br>
 
 ## ✅ 프로젝트 의존 설정
 ### ✔ 의존 설정
 
-![https://blog.kakaocdn.net/dn/bvNIUp/btrkuH8mjqN/PPJTdsrkCG4r9G5nA2k7oK/img.png](https://blog.kakaocdn.net/dn/bvNIUp/btrkuH8mjqN/PPJTdsrkCG4r9G5nA2k7oK/img.png)
+![3](img/02/3.png)
 
 그다음 의존 설정해야 한다. 강의에서는 검색해서 추가로 설정해주었는데 이렇게 하면 프로젝트 생성 도중에 79%에서 멈춰버린다. 그래서 일단 Finish 눌러서 프로젝트 생성하고 강사님 깃허브에 가서 pom.xml 복사해서 내 프로젝트에 복사해 붙였다. 😆
+
+<br>
 
 ### ✔ pom.xml
 
@@ -122,19 +130,25 @@ Maven, Java 8, Jar…. 등을 설정해주고 이름과 패키지 이름 변경
 
 주석 처리할 거 하기
 
+<br><br>
+
 ## ✅ 테스트
 
 ### ✔ 패키지 생성
 
-![https://blog.kakaocdn.net/dn/ejFbD0/btrksLDmxZt/IKBsSNmGBTwtbjtZ3t06T1/img.png](https://blog.kakaocdn.net/dn/ejFbD0/btrksLDmxZt/IKBsSNmGBTwtbjtZ3t06T1/img.png)
+![4](img/02/4.png)
 
 com.cos.blog.test라는 패키지를 만든다.
 
+<br>
+
 ### ✔ 클래스 생성
 
-![https://blog.kakaocdn.net/dn/rEyfS/btrkuHURhYq/Fv9TZM0Y4Vuvud2C0Kv7k0/img.png](https://blog.kakaocdn.net/dn/rEyfS/btrkuHURhYq/Fv9TZM0Y4Vuvud2C0Kv7k0/img.png)
+![5](img/02/5.png)
 
 테스트해볼 클래스인 BlogControllerTest를 만든다.
+
+<br>
 
 ### ✔ BlogControllerTest.java
 
@@ -153,31 +167,41 @@ public class BlogControllerTest {
 }
 ```
 
+<br>
+
 ### ✔ 실행
 
-![https://blog.kakaocdn.net/dn/ppoAP/btrkpOHJuQC/xtrztQqcwigLPN6XjjrUqk/img.png](https://blog.kakaocdn.net/dn/ppoAP/btrkpOHJuQC/xtrztQqcwigLPN6XjjrUqk/img.png)
+![6](img/02/6.png)
+
+<br>
 
 ### ✔ 결과
 
-![https://blog.kakaocdn.net/dn/lKr72/btrkwdFzvHo/eJFBjfCfOwDMkNigYlRbBK/img.png](https://blog.kakaocdn.net/dn/lKr72/btrkwdFzvHo/eJFBjfCfOwDMkNigYlRbBK/img.png)
+![7](img/02/7.png)
 
 @GetMapping 으로 설정한 URL인 http://localhost:8080/test/hello 주소를 브라우저에 입력하면 결과가 잘 나온다.
+
+<br><br>
 
 ## ✅ JPA, MySQL 스프링부트 연결
 
 ### ✔ Workbench 사용
 
-![https://blog.kakaocdn.net/dn/dBMGuO/btrkvG2fC5g/xjF0bdkJyNp1r2BExfXmFK/img.png](https://blog.kakaocdn.net/dn/dBMGuO/btrkvG2fC5g/xjF0bdkJyNp1r2BExfXmFK/img.png)
+![8](img/02/8.png)
 
 Workbench 들어가서 + 버튼누르고 root 계정으로 들어간다.
 
-![https://blog.kakaocdn.net/dn/KWRXa/btrkpPNoxnY/uS96YYDCtD3cNZdJkyseN1/img.png](https://blog.kakaocdn.net/dn/KWRXa/btrkpPNoxnY/uS96YYDCtD3cNZdJkyseN1/img.png)
+<br>
+
+![9](img/02/9.png)
 
 Test Connection 누르고 비번 입력하고 OK
 
+<br>
+
 ### ✔ 유저 생성
 
-![https://blog.kakaocdn.net/dn/tGbPJ/btrkuG2B5xW/cOKOQ1JogYBlnW4YFIBF20/img.png](https://blog.kakaocdn.net/dn/tGbPJ/btrkuG2B5xW/cOKOQ1JogYBlnW4YFIBF20/img.png)
+![10](img/02/10.png)
 
 ```
 -- 유저이름@아이피주소create user 'cos'@'%' identified by 'cos1234';
@@ -188,13 +212,17 @@ use blog;
 
 위의 쿼리문을 실행한다. (그다음 한글 설정하는데 그건 정리 안 함)
 
+<br><br>
+
 ## ✅ MySQL 프로젝트 연결
 
 이제 스프링을 데이터베이스에 연결할 것이다.
 
 ### ✔ 파일 이름 변경
 
-![https://blog.kakaocdn.net/dn/ZHH9E/btrkw3WY5y4/oXb6jhCUY5lSlMRQePdyk1/img.png](https://blog.kakaocdn.net/dn/ZHH9E/btrkw3WY5y4/oXb6jhCUY5lSlMRQePdyk1/img.png)
+![11](img/02/11.png)
+
+<br>
 
 ### ✔ 파일 수정
 
@@ -210,7 +238,7 @@ spring:
 yml 파일에 위의 코드를 추가한다.
 
 참고로 yml 파일에 모든 스프링에 대한 설정을 다 할 수 있다.
-<br><br>
+<br><br><br><br>
 
 > ### 📕 참고
 > [강의] https://www.youtube.com/watch?v=6bhF5o4gAOs&list=PL93mKxaRDidECgjOBjPgI3Dyo8ka6Ilqm
