URL 입력 시 로그인 창

--- a/Springboot/03.md
+++ b/Springboot/03.md
@@ -20,7 +20,7 @@ username에는 'user'
 
 password에는 스프링부트 프로젝트 실행하면 콘솔 창에서 확인 가능하다.
 
-![2](img/03/2-16369053020214.png)
+![2](img/03/2.png)
 
 빨간색 부분을 확인하면 된다.
 
