파일 업로드

--- a/Springboot/04.md
+++ b/Springboot/04.md
@@ -1,3 +1,5 @@
+# HTTP 요청 실습
+
 ## ✅ 통신 방법
 
 GET 데이터를 줘 -> 서버는 select 수행
@@ -7,6 +9,8 @@ POST 데이터를 추가해줘 -> 서버는 insert 수행
 PUT 데이터를 수정해줘 -> 서버는 update 수행
 
 DELETE 데이터를 삭제해줘 -> 서버는 delete 수행
+
+<br><br>
 
 ## ✅ GET 실습
 
@@ -49,18 +53,24 @@ public class HttpControllerTest {
 
 com.cos.blog.test 경로에 HttpControllerTest 클래스 파일을 만들고, 위 코드를 입력한다.
 
+<br>
+
 ### ✔ 결과
 
-![https://blog.kakaocdn.net/dn/GTok4/btrkvIMH4h6/kIH7PdsBqTwoYNnLx9B8sK/img.png](https://blog.kakaocdn.net/dn/GTok4/btrkvIMH4h6/kIH7PdsBqTwoYNnLx9B8sK/img.png)
+![01](img/04/01.png)
 
 브라우저에 http://localhost:8080/http/get 입력하면 성공!
 
-![https://blog.kakaocdn.net/dn/qy7q2/btrkweR2pIY/y21mVTr3lIWLkPHz7fpnq0/img.png](https://blog.kakaocdn.net/dn/qy7q2/btrkweR2pIY/y21mVTr3lIWLkPHz7fpnq0/img.png)
+<br>
+
+![02](img/04/02.png)
 
 Postman에서도 잘 된다.
 
+<br><br>
+
 ## ✅ POST 실습
 
-![https://blog.kakaocdn.net/dn/v9urm/btrkr3R02xI/fA5wXd5zEppaLkKQREqoaK/img.png](https://blog.kakaocdn.net/dn/v9urm/btrkr3R02xI/fA5wXd5zEppaLkKQREqoaK/img.png)
+![03](img/04/03.png)
 
 POST 요청도 결과 잘 나온다!
