--- a/Springboot/24.md
+++ b/Springboot/24.md
@@ -41,11 +41,11 @@ com.cos.blog.test 패키지에 DummyControllerTest 클래스 생성하기! Post 
 
 ### ✔ Postman으로 Insert 테스트
 
-![1](img/24강/1.png)
+![1](img/24/1.png)
 
 <br>
 
-![2](img/24강/2.png)
+![2](img/24/2.png)
 
 잘 나온다
 
@@ -114,5 +114,5 @@ public interface UserRepository extends JpaRepository<User, Integer>{
 
 ### ✔ JpaRepository의 다양한 기능
 
-![3](img/24강/3.png)
+![3](img/24/3.png)
 
