--- a/Springboot/06.md
+++ b/Springboot/06.md
@@ -25,7 +25,7 @@ HttpControllerTest 클래스의 getTset 메소드의 매개변수로 **@RequestP
 
 ### ✔ 결과
 
-![img](https://blog.kakaocdn.net/dn/cGfL4y/btrksMvzt7R/PMUOqtiZRld7FYfrcHkBtk/img.png)
+![01](img/06/01.png)
 
 잘 나온다!
 
@@ -44,7 +44,7 @@ HttpControllerTest 클래스의 getTset 메소드의 매개변수로 **@RequestP
 
 <br>
 
-![img](https://blog.kakaocdn.net/dn/dJU8e7/btrkw5N6KdD/xOC81Pq2Q6aKsjY5NVuzNk/img.png)
+![02](img/06/02.png)
 
 잘 나온다!
 
@@ -121,7 +121,7 @@ getTest 메소드를 수정한다.
 
 <br>
 
-![img](https://blog.kakaocdn.net/dn/bkfAo5/btrkqIHpqE3/NmTo0t7fbB1RruZ92S8YS0/img.png)
+![03](img/06/03.png)
 
 Postman으로 다시 테스트! 결과가 똑같다!
 
@@ -129,7 +129,7 @@ Postman으로 다시 테스트! 결과가 똑같다!
 
 ## ✅ 동작 방식
 
-![img](https://blog.kakaocdn.net/dn/nKEZN/btrkr4XJnCt/Lh120vyAGB6XffXZXgxBlk/img.png)
+![04](img/06/04.png)
 
 <br><br>
 
@@ -164,6 +164,6 @@ postTset 메소드
 
 #### ✔ 실습
 
-![img](https://blog.kakaocdn.net/dn/b6wvHi/btrkyPEglzy/kSlVOm4OHVkr5eyJyX2zc0/img.png)
+![05](img/06/05.png)
 
 다음과 같이 KEY와 VALUE를 입력한 뒤 요청하면 성공!
