스프링 동작 방식

--- a/Springboot/10.md
+++ b/Springboot/10.md
@@ -28,9 +28,11 @@ TempControllerTest 클래스를 하나 만들자.
 
 - @Controller 👉 파일을 리턴 하겠다.
 
-- @GetMapping("/temp/home") 👉 주소창에 http://localhost:8000/blog/temp/home 라고 입력하면 해당 메소드를 수행하겠다.
+- @GetMapping("/temp/home") 
 
-  <br>
+
+주소창에 http://localhost:8000/blog/temp/home 라고 입력하면 해당 메소드를 수행하겠다.
+<br>
 
 ### ✔ HTML 파일 생성
 
@@ -42,11 +44,9 @@ TempControllerTest 클래스를 하나 만들자.
 
 ⭐ 파일을 리턴할때 스프링의 기본경로는 **src/main/resources/static**이다. 이때 리턴을 "home.html"이라고 하면 파일을 찾지 못한다. **src/main/resources/statichome.html** 이 되기 때문이다. 그래서 TempControllerTest 클래스에 return을 "/home.html" 이라고 해준 것이다. 그러면 **src/main/resources/static/home.html** 이렇게 최종 경로가 완성!
 
- <br>
-
 주소창에 http://localhost:8000/blog/temp/home 입력하면 잘 나온다.
 
- <br><br>
+<br><br>
 
 ## ✅ 동적 파일
 
