[HTTP 요청] MessageConverter

--- a/Springboot/06.md
+++ b/Springboot/06.md
@@ -135,7 +135,9 @@ Postman으로 다시 테스트! 결과가 똑같다!
 
 ![04](img/06/04.png)
 
-<br><br>
+객체에 쿼리스트링값을 mapping 해주는 것을 MessageConverter 클래스가 알아서 해준다. 자동으로 파싱해서 객체에 넣어줌
+
+<br>
 
 ## ✅ POST 연습
 
