--- a/Springboot/07.md
+++ b/Springboot/07.md
@@ -1,6 +1,6 @@
 # Lombok
 
-**C:\Users\jmj\.m2\repository** 다음 경로는 내 컴퓨터에서 Maven 이 관리하는 라이브러리들이다. 이것들은 pom.xml에 기술만 하면 자동으로 다운이 된 것들이다. (Maven의 유용성ㅎㅎ)
+- 프로젝트에 Lombok 인식 
 
  <br>
 
@@ -15,7 +15,9 @@
 </dependency>
 ```
 
-pom.xml에 쓰인 Lombok 설치 경로가 보인다. C:\Users\jmj\.m2\repository\org\projectlombok\lombok 여기로 들어간다. 그러면 설치된 것들이 있을 것이다. C:\Users\jmj\.m2\repository\org\projectlombok\lombok\1.18.22 여기로 들어가면 jar 실행 파일이 있다.
+**C:\Users\jmj\\.m2\repository** 다음 경로는 내 컴퓨터에서 Maven 이 관리하는 라이브러리들이다. 이것들은 pom.xml에 기술만 하면 자동으로 다운이 된 것들이다. (Maven의 유용성ㅎㅎ)
+
+pom.xml에 쓰인 Lombok 설치 경로가 보인다. C:\Users\jmj\\.m2\repository\org\projectlombok\lombok 여기로 들어간다. 그러면 설치된 것들이 있을 것이다. C:\Users\jmj\\.m2\repository\org\projectlombok\lombok\1.18.22 여기로 들어가면 jar 실행 파일이 있다.
 
 <br>
 
@@ -33,7 +35,7 @@ STS 툴을 끄고 해당 경로에서 우클릭 후 Git Bash를 연다.
 
 ![03](img/07/03.png)
 
-**java –****jar lombok-1.18.22.jar** 라고 입력! 
+**java –jar lombok-1.18.22.jar** 라고 입력! 
 
 <br>
 
