--- a/Springboot/09.md
+++ b/Springboot/09.md
@@ -1,5 +1,9 @@
 # yml 설정
 
+yaml 설정은 스프링 프로젝트를 설정한다는 것이다. yaml 설정을 해보자.  yaml 파일은 web.xml, root-context.xml, servlet-context.xml의 합본이다.
+
+<br>
+
 ## ✅ yml 파일 설정
 
 ```yaml
@@ -12,9 +16,22 @@ server:
       enabled: true
       force: true
 ```
-application.yml에 위의 코드를 넣는다. 그러면 두 가지가 변경된다.
+- port : 포트 번호 설정
 
-1. 포트 번호가 8000으로 변경된다.
-2. 경로에 무조건 /blog가 붙는다.
+- context-path : 내 프로젝트에 들어가기 위한 진입점
+
+<br>
+
+### 변경 사항
+
+port - 포트 번호가 8000으로 변경된다.
+
+/blog로 변경했으니까 이제부터 경로에 무조건 /blog가 붙는다.
+
+<br>
 
 앞으로 프로젝트 진행할 때 저것 때문에 오류 나지 않게 주의하자. 😁
+
+<br>
+
+[yaml 설명](https://www.inflearn.com/questions/16184)
