[스프링 파일 경로 설정]

--- a/Springboot/10.md
+++ b/Springboot/10.md
@@ -1,8 +1,13 @@
-# 스프링 동작 방식
+# 스프링 파일 경로 설정
+
+- 정적 파일 경로
+- 동적 파일 경로
+
+<br>
 
 ## ✅ 정적 파일
 
-### ✔ TempControllerTest 클래스 생성
+### TempControllerTest 클래스 생성
 
 ```java
 package com.cos.blog.test;
@@ -18,36 +23,34 @@ public class TempControllerTest {
 	public String tempHome() {
 		System.out.println("tempHome()");
 		
-		//파일 리턴 기본경로 : src/main/resources/static
 		return "/home.html";
 	}
 }
 ```
 
-TempControllerTest 클래스를 하나 만들자.
+<br>
 
-- @Controller 👉 파일을 리턴 하겠다.
+### yml
 
-- @GetMapping("/temp/home") 
-
-
-주소창에 http://localhost:8000/blog/temp/home 라고 입력하면 해당 메소드를 수행하겠다.
+```yaml
+spring:
+```
 
 <br>
 
-### ✔ HTML 파일 생성
+### HTML 파일 생성
 
 ![01](img/10/01.png)
 
-위의 경로에 HTML 파일을 생성한다. 
+src/main/resources/static 경로에 HTML 파일을 생성한다. 
 
 <br>
 
-⭐ 파일을 리턴할때 스프링의 기본경로는 **src/main/resources/static**이다. 이때 리턴을 "home.html"이라고 하면 파일을 찾지 못한다. **src/main/resources/statichome.html** 이 되기 때문이다. 그래서 TempControllerTest 클래스에 return을 "/home.html" 이라고 해준 것이다. 그러면 **src/main/resources/static/home.html** 이렇게 최종 경로가 완성!
+⭐ 파일을 리턴할때 @Controller이 붙으면 스프링은 파일 찾을 때 기본경로가 **src/main/resources/static**이다. 이때 리턴을 "home.html"이라고 하면 파일을 찾지 못한다. **src/main/resources/statichome.html** 이 되기 때문이다. 그래서 TempControllerTest 클래스에 return을 "/home.html"이라고 해준 것이다. 그러면**src/main/resources/static/home.html** 이렇게 최종 경로가 완성!
 
-주소창에 http://localhost:8000/blog/temp/home 입력하면 잘 나온다.
+주소창에 http://localhost:8000/blog/temp/home 입력하면 경로를 잘 찾아서 잘 나온다.
 
-<br><br>
+<br>
 
 ## ✅ 동적 파일
 
@@ -59,15 +62,15 @@ TempControllerTest 클래스를 하나 만들자.
 
  <br>
 
-### ✔ 경로 및 파일 생성
+### 경로 및 파일 생성
 
 ![02](img/10/02.png)
 
-먼저 main 밑에 webapp/WEB-INF/views 경로를 만들고 test.jsp 파일을 만들자
+먼저 main 밑에 webapp/WEB-INF/views 경로를 만들고 test.jsp 파일을 만들자.
 
  <br>
 
-### ✔ yml 파일 수정
+### yml 파일 수정
 
 ```yaml
 spring:
@@ -79,12 +82,12 @@ spring:
 
 그다음 yml 파일에 위 코드를 써준다.
 
-- prefix 👉 컨트롤러가 리턴할 때 앞에 붙여주는 경로명
-- suffix 👉 컨트롤러가 리턴할 때 뒤에 붙여주는 경로명
+- prefix : 컨트롤러가 리턴할 때 앞에 붙여주는 경로명
+- suffix : 컨트롤러가 리턴할 때 뒤에 붙여주는 경로명
 
  <br>
 
-### ✔ TempControllerTest 클래스 수정
+### TempControllerTest 클래스 수정
 
 ```java
 package com.cos.blog.test;
@@ -108,7 +111,7 @@ TempControllerTest에 tempJsp 메소드를 만든다.
 
  <br>
 
-### ✔ 동작 방식
+### 동작 방식
 
 사용자가 http://localhost:8000/blog/temp/jsp 주소를 요청한다.
 
@@ -119,7 +122,7 @@ suffix : .jsp
 
  <br>
 
-### ✔ 결과
+### 결과
 
 ![03](img/10/03.png)
 
