[파일 경로 설정]

--- a/Springboot/10.md
+++ b/Springboot/10.md
@@ -120,6 +120,8 @@ suffix : .jsp
 
 위 두 가지에 의해서 return 값 양옆으로 붙어서 풀 경로는 /WEB-INF/views/**test**.jsp가 된다.
 
+그러면 톰캣이 동적 파일이라는 것을 인식해서 컴파일해서 html 파일로 넘겨준다. 
+
  <br>
 
 ### 결과
