[테이블 생성]

--- a/Springboot/11.md
+++ b/Springboot/11.md
@@ -4,11 +4,11 @@ User, Board, Reply 세 개의 테이블을 생성해보자
 
 <br>
 
-## ✅ 패키지 생성
+## ✅ model 패키지 생성
 
 ![01](img/11/01.png)
 
-model 패키지를 생성한다. com.cos.blog.model 하고 User, Board, Reply 클래스를 만든다.
+테이블을 생성하기 위한 model 패키지를 생성한다. com.cos.blog.model 하고 User, Board, Reply 클래스를 만든다.
 
 <br>
 
@@ -21,11 +21,12 @@ import java.sql.Timestamp;
 
 import javax.persistence.Column;
 import javax.persistence.Entity;
+import javax.persistence.EnumType;
+import javax.persistence.Enumerated;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
 
-import org.hibernate.annotations.ColumnDefault;
 import org.hibernate.annotations.CreationTimestamp;
 
 import lombok.AllArgsConstructor;
@@ -37,40 +38,50 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor
 @AllArgsConstructor
 @Builder 
-@Entity 
+@Entity
 public class User {
 	@Id 
 	@GeneratedValue(strategy = GenerationType.IDENTITY) 
-	private int id; 
+	private int id;
 	
-	@Column(nullable = false, length = 20) 
-	private String username; 
+	@Column(nullable = false, length = 20, unique = true) 
+	private String username;
 	
 	@Column(nullable = false, length = 100) 
 	private String password;
 	
 	@Column(nullable = false, length = 50) 
 	private String email;
-	
-	@ColumnDefault("'user'")
-	private String role; 
-	
-	@CreationTimestamp
+
+	@Enumerated(EnumType.STRING)
+	private RoleType role;
+
+	@CreationTimestamp 
 	private Timestamp createDate;
 }
 ```
 
-→ 저장 누르면 연결한 DB에 테이블이 생긴다.
+→ 저장 누르면 연결한 DB에 테이블이 생긴다. 처음 생성할 때 ddl-auto: create 인 것 확인하기.
 
 <br>
 
-### ✔ GenerationType.IDENTITY
+### @id
+
+@id 붙이면 primary Key 가 된다.
+
+<br>
+
+### @GeneratedValue 
+
+넘버링 전략이다. 
+
+<br>
 
 ```java
 @GeneratedValue(strategy = GenerationType.IDENTITY) 
 ```
 
-위의 코드가 의미하는 것은 무엇일까? YAML, 파일과 같이 보자.
+ GenerationType을 **IDENTITY**로 하면 프로젝트에 연결된 DB의 넘버링 전략을 따라간다는 것이다. 즉, 오라클을 사용한다면 시퀀스를 사용하는 것이고, mysql을 사용하면 auto_increment를 사용한다. YAML 파일과 같이 보자.
 
 <br>
 
@@ -91,15 +102,25 @@ jpa:
 use-new-id-generator-mappings: false 
 ```
 
-**false 👉** JPA가  사용하는 기본 넘버링 전략 사용하지 않는다
+**false 👉** JPA가  사용하는 기본 넘버링 전략 사용하지 않는다.
 
-**true** 👉 JPA가 사용하는 기본 넘버링 전략 사용
+**true** 👉 JPA가 사용하는 기본 넘버링 전략 사용한다.
 
-<br><br>
+<br>
 
-## ✅ 추가 기능 살펴보기
+### @Column
 
-### ✔ **ddl-auto: create**
+```java
+@Column(nullable = false, length = 20, unique = true) 
+```
+
+- nullable = false 👉 null이 될 수 없다
+- length = 20 👉 길이
+- unique = true 👉 중복 허용 안 한다.
+
+<br>
+
+### **ddl-auto: create**
 
 ```yaml
 jpa:
@@ -123,21 +144,21 @@ jpa:
 
 <br>
 
-### ✔ show-sql
+### show-sql
 
 ![02](img/11/02.png)
 
-show-sql: true 콘솔 창에 아래처럼 보이게 하는 기능
+show-sql : true 콘솔 창에 아래처럼 보이게 하는 기능
 
 <br>
 
-### ✔  hibernate.format_sql
+### hibernate.format_sql
 
 hibernate.format_sql: true 👉 true로 하면 콘솔 창에 테이블 생성한 것 정렬돼서 나옴
 
 <br>
 
-### ✔ physical-strategy
+### physical-strategy
 
 ```java
 @Column(nullable = false, length = 20) 
@@ -150,11 +171,9 @@ hibernate.format_sql: true 👉 true로 하면 콘솔 창에 테이블 생성한
 	private String email;
 ```
 
-physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl의 의미는 테이블 만들 때 변명 그대로 DB에 필드를 넣어준다는 것이다. 즉 username, password, email이 그대로 들어간다
 
-테이블 만들 때 변명 그대로 DB에 필드를 넣어준다. 즉 username, password, email이 그대로 들어간다
-
-<br><br>
+<br>
 
 ## ✅ Board.java
 
@@ -211,15 +230,69 @@ public class Board {
 	@JoinColumn(name="userId") 
 	private User user; 
 
-	@OneToMany(mappedBy = "board", fetch = FetchType.EAGER, cascade = CascadeType.REMOVE) 
-	private List<Reply> replys;
+	@OneToMany(mappedBy = "board", fetch = FetchType.EAGER) 
+	private List<Reply> reply;
 	
 	@CreationTimestamp
 	private LocalDateTime createDate; 
 }
 ```
 
-<br><br>
+<br>
+
+### @Lob 
+
+대용량 데이터 사용할 때 쓴다.
+
+<br>
+
+### @JoinColumn
+
+ ```java
+ @JoinColumn(name="userId") 
+ private User user; 
+ ```
+
+@JoinColumn(name="userId")는 실제 DB에 만들어질 때 userId라는 이름으로 FK를 만든다.
+
+하지만 위 코드로는 User랑 연관 관계가 없어서 연관 관계를 맺어줘야 한다. 방법은 @ManyToOne 사용하면 된다.
+
+<br>
+
+### @ManyToOne
+
+```java
+@ManyToOne(fetch = FetchType.EAGER) 
+@JoinColumn(name="userId") 
+private User user; 
+```
+
+- Many 👉 Board
+- User 👉 One
+
+의미 : 한 명의 사용자는 여러 개의 게시글을 쓸 수 있다. (여러 개의 게시글은 한 명의 사용자에 의해 쓰일 수 있다)
+그리고 User 객체를 참조한다.
+
+<br>
+
+### fetch = FetchType
+
+```java
+@ManyToOne(fetch = FetchType.EAGER)  
+@JoinColumn(name="userId") 
+private User user; 
+```
+
+**EAGER** : Board 테이블을 Select하면 user 정보도 가져온다. 
+
+<br>
+
+```java
+@OneToMany(mappedBy = "board", fetch = FetchType.EAGER, cascade = CascadeType.REMOVE) 
+private List<Reply> replys;
+```
+
+
 
 ## ✅ Reply.java
 
@@ -257,6 +330,7 @@ public class Reply {
 	@Column(nullable = false, length = 200)
 	private String content;
 	
+    /// 여러개의 답변은 하나의 유저가 쓸 수 있다.
 	@ManyToOne 
 	@JoinColumn(name="boardId") 
 	private Board board;
@@ -269,3 +343,10 @@ public class Reply {
 	private LocalDateTime createDate;
 }
 ```
+
+<br>
+
+## ✅ 연관 관계 
+
+[연관 관계의 주인](https://www.youtube.com/watch?v=DtMmXQl4_hw&list=PL93mKxaRDidECgjOBjPgI3Dyo8ka6Ilqm&index=22)
+
