[Insert 테스트] 내용 추가

--- a/Springboot/12.md
+++ b/Springboot/12.md
@@ -8,24 +8,12 @@ package com.cos.blog.test;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-// 페이지 이동이 아니라 
-// 회원 가입이 잘 됐는지, 안 됐는지만 확인하는용의 리턴이여서 @RestController 사용한다.
 @RestController
 public class DummyControllerTest {
 	// 회원 가입은 -> POST 요청이다. 
-	// http://localhost:8000/blog/dummy/join 주소에 요청할때
-	// http의 body에 username, password, email 데이터를 가지고 요청하면
-	// 3개의 데이터가 join 함수 파라미터에 쏙쏙 들어간다.
 	@PostMapping("/dummy/join")
 	public  String join(String username, String password, String email) { 
-        // (String username, String password, String email) 파라미터 3개는 
-		// key=value 형태로 데이터를 받는다 -> 약속된 규칙임 (스프링이 제공해주니까 우린 쓰기만 하면 돼)
-		// x-www-form-urlencoded 로 전송되는 데이터는 key=value로 오는데 그것은 
-		// 스프링이 함수의 파라미터로 파싱해서 집어 넣어주는것이다.
-		// 근데 더 강력한 기능도 있음 -> 파라미터를 Object로도 받게 해줌 
-		// public  String join(User user) 이렇게!
-		
-		// 실제로 받아지는지 출력
+
 		System.out.println("username : " + username);
 		System.out.println("password : " + password);
 		System.out.println("email : " + email);
@@ -35,11 +23,13 @@ public class DummyControllerTest {
 }
 ```
 
-com.cos.blog.test 패키지에 DummyControllerTest 클래스 생성하기! Post 요청이기 때문에 Postman 사용해서 테스트한다.
+com.cos.blog.test 패키지에 DummyControllerTest 클래스 생성하기! Post 요청이기 때문에 Postman 사용해서 테스트한다. 페이지 이동이 아니라 회원 가입이 잘 됐는지, 안 됐는지만 확인하는 리턴이여서 @RestController 사용한다.
+
+http://localhost:8000/blog/dummy/join 주소에 요청할 때 http의 body에 username, password, email 데이터를 가지고 요청하면 3개의 데이터가 join 함수 파라미터에 쏙쏙 들어간다. (String username, String password, String email) 파라미터 3개는 key=value 형태로 데이터를 받는다. 이것은 약속된 규칙이다! (스프링이 제공해주니까 우린 쓰기만 하면 돼)
 
 <br>
 
-### ✔ Postman으로 Insert 테스트
+### Postman으로 Insert 테스트
 
 ![01](img/12/01.png)
 
@@ -49,11 +39,11 @@ com.cos.blog.test 패키지에 DummyControllerTest 클래스 생성하기! Post 
 
 잘 나온다
 
-⭐ html에서 form 태그를 통해서 데이터를 전송하면 x-www-form-urlencoded 타입으로 전송하게 된다. x-www-form-urlencoded 타입으로 전송된다는 뜻은 데이터를 key=value 형태로 전송한다는 뜻이다. 데이터가 여러 개면 key=value&key=value... 이런 형태.
+⭐ html에서 form 태그를 통해서 데이터를 전송하면 x-www-form-urlencoded 타입으로 전송하게 된다. x-www-form-urlencoded 타입으로 전송된다는 뜻은 데이터를 key=value 형태로 전송한다는 뜻이다. 데이터가 여러 개면 key=value&key=value... 이런 형태. 그리고 이것은 스프링이 함수의 파라미터로 파싱해서 집어넣어 준다.
 
-<br><br>
+<br>
 
-## ✅ 파라미터를 객체로 변경
+### 파라미터를 객체로 변경
 
 ```java
 package com.cos.blog.test;
@@ -82,13 +72,11 @@ public class DummyControllerTest {
 }
 ```
 
-파라미터를 User 객체로 변경하고 테스트해도 결과 잘 나온다.
+파라미터를 Object로도 받게 해준다. public  String join(User user) 이렇게! 파라미터를 User 객체로 변경하고 테스트해도 결과 잘 나온다.
 
-<br><br>
+<br>
 
-## ✅ 데이터베이스에 Insert
-
-### ✔ UserRepository 클래스
+### repository 생성
 
 ```java
 package com.cos.blog.repository;
@@ -111,11 +99,11 @@ public interface UserRepository extends JpaRepository<User, Integer>{
 }
 ```
 
-이제 실제 데이터베스에 넣어볼차례이다. 먼저 패키지 com.cos.blog.repository 를 만들고 패키지 안에 UserRepository 클래스를 만든다.
+패키지 com.cos.blog.repository 를 만들고 패키지 안에 UserRepository 클래스를 만든다.
 
 <br>
 
-### ✔ DummyControllerTest 클래스
+### DummyControllerTest 클래스
 
 ```java
 package com.cos.blog.test;
@@ -129,13 +117,8 @@ import com.cos.blog.repository.UserRepository;
 
 @RestController
 public class DummyControllerTest {
-	
-	// 일단 처음에 userRepository는 null이다.
-	// 스프링이. @RestController를 읽어서 DummyControllerTest 클래스를 메모리에 올릴 때 null이야
-	// 이때 @Autowired를 붙여주면 DummyControllerTest가 메모리에 올라갈 때 @Autowired도 메모리에 같이 올라간다 
-	// 즉, userRepository 얘도 메모리에 같이 올라간다는 뜻
-	// @Autowired는 스프링이 관리하는 UserRepository 타입의 객체가 있으면 userRepository 여기에 넣어준다
-	@Autowired // 의존성 주입(DI)
+    
+	@Autowired 
 	private UserRepository userRepository;
 	
 	@PostMapping("/dummy/join")
@@ -162,7 +145,7 @@ public class DummyControllerTest {
 
 ![04](img/12/04.png)
 
-실행시켰으면 테이블이 만들어졌을 것이다. Workspace에서 만들어진 테이블 보니까 아직 값이 없다.
+실행하기 전에 테이블 확인해보자. Workspace에서 만들어진 테이블 보니까 아직 값이 없다.
 
 <br>
 
@@ -176,9 +159,18 @@ Postman으로 테스트하고 나서 다시 테이블을 확인해보자.
 
 값이 정상적으로 들어간 것을 확인할 수 있다.
 
-<br><br>
+<br>
 
-### ✔ JpaRepository의 다양한 기능
+### @Autowired
+
+```java
+@Autowired // 의존성 주입(DI)
+private UserRepository userRepository;
+```
+
+일단 처음에 userRepository는 null이다. 스프링이 @RestController를 읽어서 DummyControllerTest 클래스를 메모리에 올릴 때 null이야. 이때, @Autowired를 붙여주면 DummyControllerTest가 메모리에 올라갈 때@Autowired도 메모리에 같이 올라간다. 즉, userRepository 얘도 메모리에 같이 올라간다는 뜻! @Autowired는 스프링이 관리하는 UserRepository 타입의 객체가 있으면 userRepository 여기에 넣어준다.
+
+### JpaRepository의 다양한 기능
 
 ![03](img/12/03.png)
 
