[role에 null 해결]

--- a/Springboot/13.md
+++ b/Springboot/13.md
@@ -1,6 +1,10 @@
 # role에 null 해결 
 
-## ✅ @DynamicInsert
+- null 값 해결해보기
+
+<br>
+
+## ✅ 문제점
 
 ![01](img/13/01.png)
 
@@ -25,7 +29,7 @@ role은 Default Value가 user이다. 그래서 null 값이 아닌 user로 들어
         (?, ?, ?, ?, ?)
 ```
 
-데이터 삽입될 때 아래와 같이 쿼리 문이 만들어져서 실행되었다.
+데이터 삽입될 때 아래와 같이 쿼리 문이 만들어져서 실행되었다. 이렇게 되면 role에 null 값이 들어가고 default 값인 user가 안 들어가 진다.
 
 <br>
 
@@ -42,7 +46,7 @@ role은 Default Value가 user이다. 그래서 null 값이 아닌 user로 들어
 
 <br>
 
-### ⚫ @DynamicInsert
+## ✅ 방법1 - @DynamicInsert
 
 ```java
 package com.cos.blog.model;
@@ -98,7 +102,7 @@ public class User {
 
 <br>
 
-### ⚫ 결과
+### 결과
 
 ![03](img/13/03.png)
 
@@ -108,16 +112,17 @@ public class User {
 
 하지만 @DynamicInsert 같은 것을 계속 붙이면 끝도 없어짐.. 좋은 방법은 아님 
 
-<br><br>
+<br>
 
-## ✅ Enum
+## ✅ 방법2 - Enum 
 
-### ⚫ Enum 생성
+### Enum 생성
 
 ```java
 package com.cos.blog.model;
 
-// 실수하는 것을 방지하기 위해서 enum을 만든다.
+// 실수하는 것을 방지하기 위해서 enum을 사용
+// Enum은 데이터의 도메인을 만들 때 사용
 public enum RoleType {
 	USER, ADMIN
 }
@@ -127,7 +132,7 @@ com.cos.blog.model에  enum으로 RoleType 만든다.
 
 <br>
 
-### ⚫ User 클래스 수정
+### User 클래스 수정
 
 ```java
 package com.cos.blog.model;
@@ -181,7 +186,9 @@ public class User {
 
 <br>
 
-### ⚫ DummyControllerTest 클래스 수정
+@Enumerated(EnumType.STRING) : DB는 RoleType 없어서 해당 enum이 String이라는 것을 알려주어야 힘
+
+### DummyControllerTest 클래스 수정
 
 ```java
 package com.cos.blog.test;
@@ -220,7 +227,7 @@ public class DummyControllerTest {
 
 <br>
 
-### ⚫ 결과
+### 결과
 
 ![04](img/13/04.png)
 
