[select 테스트 (with. id)]

--- a/Springboot/14.md
+++ b/Springboot/14.md
@@ -8,11 +8,11 @@
 
 데이터 잘 삽입된 것을 알 수 있다. 그리고 ddl 다시 update로 바꿔준다. 
 
-<br><br>
+<br>
 
-## ✅ select 코드 추가 
+## ✅ select  
 
-### ⚫ 방법1
+### 방법1
 
 ```java
 package com.cos.blog.test;
@@ -34,18 +34,10 @@ public class DummyControllerTest {
     
 	@Autowired 
 	private UserRepository userRepository;
-	
-	// <select 테스트>
-	// {id}주소로 파라미터를 전달 받을 수 있다.
-	// http://localhost:8000/blog/dummy/user/3
-	// 위의 주소를 요청하면 3이 {id}에 쏙 들어간다.
+    
 	@GetMapping("dummy/user/{id}")
 	public User detail(@PathVariable int id) {
-		
-		// findById의 리턴 타입이 User가 아니라 Optional이다. 
-		// 만약에 user/4 를 찾을 때, 데이터베이스에서 못찾아오면 user가 null이 된다.
-		// 그럼 return 할 때 null이 return된다. 그럼 프로그램에 문제가 생길수도...
-		// 그래서 Optional로 User 객체를 감싸서 가져올테니 null인지 아닌지 판단해서 return 하는 것이다!!
+	
 		User user = userRepository.findById(id).orElseGet(new Supplier<User>() { // 익명 객체
 			// Supplier는 인터페이스니까, 인터페이스가 들고있는 함수 get을 override 해주어야 한다. get()은 추상메소드니까
 			// 인터페이스 new 하려면 익명 객체를 만들어야 한다. 
@@ -59,22 +51,6 @@ public class DummyControllerTest {
 		});		
 		return user;
 	}
-	
-	@PostMapping("/dummy/join")
-	public  String join(User user) { 
-		System.out.println("username : " + user.getUsername());
-		System.out.println("password : " + user.getPassword());
-		System.out.println("email : " + user.getEmail());
-		
-		System.out.println("id : " + user.getId());
-		System.out.println("role : " + user.getRole());
-		System.out.println("createDate : " + user.getCreateDate());
-		
-		user.setRole(RoleType.USER);
-		userRepository.save(user);
-		
-		return "회원가입이 완료되었습니다.";
-	}
 }
 ```
 
@@ -82,7 +58,7 @@ public class DummyControllerTest {
 
 <br>
 
-### ⚫ 방법2
+### 방법2
 
 ```java
 package com.cos.blog.test;
@@ -115,37 +91,49 @@ public class DummyControllerTest {
 			}
 		});
 
-		// 요청은 웹브라우저에서 하는데
-		// 웹브라우저는 user 객체를 이해못함 -> user 객체를 변환해야함 -> 웹브라우저가 이해할수 있는 데이터로! 
-		// 가장 좋은 방법은 JSON임
-		// 스프링 부트는 MessageConverter라는 애가 응답시에 자동 작동한다
-		// 만약에 자바 오브젝트를 리턴하게 되면 MessageConverter가 Jackson 이라는 라이브러리를 호출해서
-		// user 오브젝트를 json으로 변환해서 브라우저에게 던져준다. 
 		return user;
-	}
-	
-	@PostMapping("/dummy/join")
-	public  String join(User user) { 
-		System.out.println("username : " + user.getUsername());
-		System.out.println("password : " + user.getPassword());
-		System.out.println("email : " + user.getEmail());
-		
-		// Postman에서 null 값 들어옴
-		System.out.println("id : " + user.getId());
-		System.out.println("role : " + user.getRole());
-		System.out.println("createDate : " + user.getCreateDate());
-		
-		user.setRole(RoleType.USER);
-		userRepository.save(user);
-		
-		return "회원가입이 완료되었습니다.";
 	}
 }
 ```
 
 <br>
 
-### ⚫ 결과
+### 코드 설명
+
+```java
+@GetMapping("dummy/user/{id}")
+```
+
+{id} 주소로 파라미터를 전달받을 수 있다. http://localhost:8000/blog/dummy/user/3 이 주소를 요청하면 3이 {id} 에 쏙 들어간다.
+
+<br>
+
+```java
+		User user = userRepository.findById(id).orElseThrow(new Supplier<IllegalArgumentException>()) {
+			@Override
+			public IllegalArgumentException get() {
+				return new IllegalArgumentException("해당 유저는 없습니다! id : " + id);
+			}
+		});
+```
+
+findById의 리턴 타입이 User가 아니라 Optional이다. 만약에 없는 id를 찾을 때, 데이터베이스에서 못 찾아오니까 user가 null이 된다. 그럼 return 할 때 null이 return 된다. 그럼 프로그램에 문제가 생길 수도... 그래서 Optional로 User 객체를 감싸서 가져올 테니 null인지 아닌지 판단해서 return 하는 것이다!!
+
+<br>
+
+```java
+return user;
+```
+
+데이터를 리턴해주는 @RestController가 객체를 웹브라우저에 리턴한다? 그럼 웹브라우저는 user 객체 당연히 이해 못 한다. 
+
+요청은 웹브라우저에서 하는데 웹브라우저는 user 객체를 이해 못 해서 user 객체를 변환해야 한다. 웹브라우저가 이해할 수 있는 데이터로! 
+
+가장 좋은 방법은 JSON이다. 스프링 부트는 MessageConverter라는 애가 응답 시에 자동 작동한다. 만약에 자바 오브젝트를 리턴하게 되면 MessageConverter가 Jackson이라는 라이브러리를 호출해서 user 오브젝트를 JSON으로 변환해서 브라우저에 던져준다. 
+
+<br>
+
+### 결과
 
 ![02](img/14/02.png)
 
