--- a/Springboot/15.md
+++ b/Springboot/15.md
@@ -1,17 +1,11 @@
 # select 테스트 - 여러 건의 데이터 
 
-## ⚫ DummyControllerTest 수정
-
-```java
-	@GetMapping("/dummy/user")
-	public List<User> list(){
-		return userRepository.findAll(); 
-	}
-```
-
-list() 함수를 추가해준다.
+- 여러 건 select 실습
+- 크롬 확장 프로그램 설치 - JSONview
 
 <br>
+
+## select - 여러 건
 
 ```java
 package com.cos.blog.test;
@@ -34,41 +28,10 @@ public class DummyControllerTest {
 	@Autowired 
 	private UserRepository userRepository;
 	
-	// 여러 건의 데이터 불러오기
 	// http://localhost:8000/blog/dummy/user
 	@GetMapping("/dummy/user")
 	public List<User> list(){
-		return userRepository.findAll(); // 전체가 다 리턴됨
-	}
-
-	@GetMapping("dummy/user/{id}")
-	public User detail(@PathVariable int id) {
-		
-		// http://localhost:8000/blog/dummy/user/3
-		User user = userRepository.findById(id).orElseThrow(new Supplier<IllegalArgumentException>() {
-			@Override
-			public IllegalArgumentException get() {
-				return new IllegalArgumentException("해당 유저는 없습니다! id : " + id);
-			}
-		});
-		return user;
-	}
-	
-	@PostMapping("/dummy/join")
-	public  String join(User user) { 
-		System.out.println("username : " + user.getUsername());
-		System.out.println("password : " + user.getPassword());
-		System.out.println("email : " + user.getEmail());
-		
-		// Postman에서 null 값 들어옴
-		System.out.println("id : " + user.getId());
-		System.out.println("role : " + user.getRole());
-		System.out.println("createDate : " + user.getCreateDate());
-		
-		user.setRole(RoleType.USER);
-		userRepository.save(user);
-		
-		return "회원가입이 완료되었습니다.";
+		return userRepository.findAll(); 
 	}
 }
 
@@ -76,9 +39,9 @@ public class DummyControllerTest {
 
 <br>
 
-### ⚫ 결과
+### 결과
 
 ![01](img/15/01.png)
 
-전체 데이터가 잘 불러온다.
+전체 데이터가 잘 불러온다. (JSONview 덕분에 깔끔하게 보인다.)
 
