--- a/Springboot/18.md
+++ b/Springboot/18.md
@@ -1,30 +1,10 @@
-# Delete 테스트
+# delete 테스트
 
-- Delete를 만들고 user1을 삭제해보자
-
-<br>
-
-## ✅ Delete 
-
-### 추가할 코드
-
-```java
-	// Delete 테스트
-	// http://localhost:8000/blog/dummy/user/1 -> user1을 삭제해보자 
-	@DeleteMapping("/dummy/user/{id}")
-	public String delete(@PathVariable int id) {
-		try {
-			userRepository.deleteById(id);
-		}catch(EmptyResultDataAccessException e) {
-			return "삭제에 실패하였습니다. 해당 id는 DB에 없습니다.";
-		}
-		return " 삭제되었습니다. id : " + id;
-	}
-```
+- delete를 만들고 user1을 삭제해보자
 
 <br>
 
-### 전체 코드
+## ✅ delete 
 
 ```java
 package com.cos.blog.test;
@@ -53,7 +33,6 @@ public class DummyControllerTest {
 	@Autowired 
 	private UserRepository userRepository;
 	
-	// Delete 테스트
 	// http://localhost:8000/blog/dummy/user/1 -> user1을 삭제해보자 
 	@DeleteMapping("/dummy/user/{id}")
 	public String delete(@PathVariable int id) {
@@ -63,47 +42,6 @@ public class DummyControllerTest {
 			return "삭제에 실패하였습니다. 해당 id는 DB에 없습니다.";
 		}
 		return " 삭제되었습니다. id : " + id;
-	}
-	
-	@GetMapping("/dummy/users") 
-	public List<User> list(){
-		return userRepository.findAll(); 
-	}
-	
-	@GetMapping("/dummy/user")
-	public List<User> pageList(@PageableDefault(size=2, sort="id", direction = Direction.DESC) Pageable pageable){
-		Page<User> pagingUser = userRepository.findAll(pageable);
-
-		List<User> users = pagingUser.getContent();
-		return users;
-	}
-	
-	@GetMapping("dummy/user/{id}")
-	public User detail(@PathVariable int id) {
-		User user = userRepository.findById(id).orElseThrow(new Supplier<IllegalArgumentException>() {
-			@Override
-			public IllegalArgumentException get() {
-				return new IllegalArgumentException("해당 유저는 없습니다! id : " + id);
-			}
-		});
-		return user;
-	}
-	
-	@PostMapping("/dummy/join")
-	public  String join(User user) { 
-		System.out.println("username : " + user.getUsername());
-		System.out.println("password : " + user.getPassword());
-		System.out.println("email : " + user.getEmail());
-		
-		// Postman에서 null 값 들어옴
-		System.out.println("id : " + user.getId());
-		System.out.println("role : " + user.getRole());
-		System.out.println("createDate : " + user.getCreateDate());
-		
-		user.setRole(RoleType.USER);
-		userRepository.save(user);
-		
-		return "회원가입이 완료되었습니다.";
 	}
 }
 ```
