[파싱과 통신 방법] 오타 수정

--- a/Springboot/19.md
+++ b/Springboot/19.md
@@ -16,7 +16,7 @@
 
 ## ✅ Post, Put, Delete 요청
 
-데이터를 담아 보내야 할 것이 많다. form 태그는 getmpost 요청밖에 못 한다.
+데이터를 담아 보내야 할 것이 많다. form 태그는 get, post 요청밖에 못 한다.
 
 delete요청과 put요청은 자바스크립트로 요청을 해야 한다.
 
