--- a/Java/자바-실행-과정.md
+++ b/Java/자바-실행-과정.md
@@ -1,5 +1,6 @@
 # 자바 실행 과정과 메모리
 
+- 운영체제
 - 자바 실행 과정
 - 환경 변수 
 - 자바 메모리 구조
@@ -48,7 +49,7 @@ public class HelloWorld {
 
 <br>
 
-![image-20211216001101569](C:\Users\jmj\AppData\Roaming\Typora\typora-user-images\image-20211216001101569.png)
+![image-20211216001101569](img/자바-실행-과정/image-20211216001101569.png)
 
 이클립스에서 저장을 하였더니 진짜 .class 파일이 생겼다. 참고로 사진에 보이는 bin 폴더에  .class 파일이 모여진다.
 
