--- a/Java/자바-실행-과정.md
+++ b/Java/자바-실행-과정.md
@@ -21,7 +21,7 @@ JDK를 설치하면 환경변수라는 것을 설정한다. 이 과정을 진행
 
 ## 자바 실행 과정
 
-.java 파일을 Javan.exe 실행 파일이 실행되면 .class 파일이 생긴다. 이 .class 파일은 JVM이 이해할 수 있는 언어이다. 그다음 java.exe 실행파일로  .class 파일을 실행하면 JVM에 전달이 되고 JVM이 운영체제에 전달하여 프로그램이 실행된다.
+.java 파일을 Javac.exe 실행 파일이 실행되면 .class 파일이 생긴다. 이 .class 파일은 JVM이 이해할 수 있는 언어이다. 그다음 java.exe 실행파일로  .class 파일을 실행하면 JVM에 전달이 되고 JVM이 운영체제에 전달하여 프로그램이 실행된다.
 
 .java 파일에서 .class로 변환되는 과정을 컴파일이라고 한다. 
 
